Fix: #74 - arrow cut off
https://github.com/Buckinghamshire-Digital-Service/hr-service-desk-alpha/issues/74

--- a/src/components/Collapsible/Collapsible.scss
+++ b/src/components/Collapsible/Collapsible.scss
@@ -38,6 +38,7 @@ $dims: 2.4rem;
 
   .text-link {
     font-size: 100%;
+    padding-right: 1rem;
   }
 
   blockquote {
